WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
118745
MakeRope fixup shouldn't lead to an Identity without kids
https://bugs.webkit.org/show_bug.cgi?id=118745
Summary
MakeRope fixup shouldn't lead to an Identity without kids
Filip Pizlo
Reported
2013-07-16 12:35:08 PDT
Patch forthcoming. <
rdar://problem/14202134
>
Attachments
the patch
(3.70 KB, patch)
2013-07-16 12:37 PDT
,
Filip Pizlo
mhahnenberg
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-06 for mac-mountainlion
(755.67 KB, application/zip)
2013-07-16 13:38 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2013-07-16 12:37:36 PDT
Created
attachment 206807
[details]
the patch I am still running tests to create expected.txt file for the new test.
Mark Hahnenberg
Comment 2
2013-07-16 12:38:40 PDT
Comment on
attachment 206807
[details]
the patch View in context:
https://bugs.webkit.org/attachment.cgi?id=206807&action=review
> Source/JavaScriptCore/ChangeLog:8 > + Make the empty string pruning park of fixupMakeRope() stop if it's on the last child.
s/park/part/
Mark Hahnenberg
Comment 3
2013-07-16 12:39:11 PDT
Comment on
attachment 206807
[details]
the patch r=me with test expectation.
Build Bot
Comment 4
2013-07-16 13:38:46 PDT
Comment on
attachment 206807
[details]
the patch
Attachment 206807
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/1085304
New failing tests: fast/js/dfg-make-rope-all-empty-strings.html
Build Bot
Comment 5
2013-07-16 13:38:48 PDT
Created
attachment 206811
[details]
Archive of layout-test-results from webkit-ews-06 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-06 Port: mac-mountainlion Platform: Mac OS X 10.8.3
Filip Pizlo
Comment 6
2013-07-16 14:40:03 PDT
Landed in
http://trac.webkit.org/changeset/152742
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug